<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="?attr/colorPrimary">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_detail_user"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginTop="40dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/iv_detail_user"
                    app:layout_constraintStart_toStartOf="@id/iv_detail_user"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_user"
                    tools:text="@tools:sample/full_names" />

                <TextView
                    android:id="@+id/tv_detail_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/tv_detail_name"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_name"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/tv_detail_user"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_user"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_user" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/company"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/tv_detail_location"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_location"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

                <TextView
                    android:id="@+id/tv_detail_repository"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/repositories"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toStartOf="@+id/tv_detail_followers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_company" />

                <TextView
                    android:id="@+id/tv_detail_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/followers_s"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@id/tv_detail_company"
                    app:layout_constraintStart_toEndOf="@id/tv_detail_repository"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_company"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_company" />

                <TextView
                    android:id="@+id/tv_detail_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/following_s"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_company" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@null"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="Followers" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                tools:text="Following" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>